[gd_scene load_steps=12 format=3 uid="uid://swq672klppy0"]

[ext_resource type="Script" path="res://Entities/Enemy/Enemy.gd" id="1_m5wyy"]
[ext_resource type="Shape2D" uid="uid://bjmmssqn4o6qo" path="res://Entities/Enemy/EnemyCollisionShape.tres" id="2_b3hpi"]
[ext_resource type="Texture2D" uid="uid://cho8gsxxebl32" path="res://Assets/Actual/Reflection_Sprite_Enemy-Sheet.png" id="3_mysbq"]

[sub_resource type="AtlasTexture" id="AtlasTexture_53iuu"]
atlas = ExtResource("3_mysbq")
region = Rect2(0, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_fv2xi"]
atlas = ExtResource("3_mysbq")
region = Rect2(80, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_loc4l"]
atlas = ExtResource("3_mysbq")
region = Rect2(160, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_kpcdx"]
atlas = ExtResource("3_mysbq")
region = Rect2(240, 0, 80, 80)

[sub_resource type="SpriteFrames" id="SpriteFrames_vgyyo"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_53iuu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fv2xi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_loc4l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kpcdx")
}],
"loop": true,
"name": &"default",
"speed": 4.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4tfsa"]
size = Vector2(8, 40)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ho1f1"]
size = Vector2(8, 8)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_if00p"]
radius = 26.0
height = 64.0

[node name="Enemy" type="CharacterBody2D" groups=["enemies"]]
collision_layer = 4
collision_mask = 35
script = ExtResource("1_m5wyy")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-5, 11)
shape = ExtResource("2_b3hpi")

[node name="Flippable" type="Node2D" parent="."]
position = Vector2(-1, 7)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Flippable"]
position = Vector2(-3, -4)
sprite_frames = SubResource("SpriteFrames_vgyyo")

[node name="WallDetect" type="Area2D" parent="Flippable"]
position = Vector2(-32, 8)
collision_layer = 4
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="Flippable/WallDetect"]
position = Vector2(0, -4)
shape = SubResource("RectangleShape2D_4tfsa")

[node name="FloorDetect" type="Area2D" parent="Flippable"]
position = Vector2(-41, 42)
collision_layer = 4
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="Flippable/FloorDetect"]
shape = SubResource("RectangleShape2D_ho1f1")

[node name="Hitbox" type="Area2D" parent="."]
position = Vector2(-4, -1)
collision_layer = 4
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(-1, 11)
shape = SubResource("CapsuleShape2D_if00p")

[connection signal="body_entered" from="Flippable/WallDetect" to="." method="_on_wall_detect_body_entered"]
[connection signal="body_entered" from="Hitbox" to="." method="_on_hitbox_body_entered"]
